test/programs/invalid/modifiers/transient.java
  protected class A {
    public transient int x;
  }

